--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
