--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mockjs": "^1.1.0",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
