--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   "dependencies": {
     "@riophae/vue-treeselect": "^0.4.0",
     "axios": "^0.19.2",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "moment": "^2.24.0",
+    "normalize.css": "^8.0.1",
+    "qiniu": "^7.3.2",
+    "qiniu-js": "^3.1.0",
+    "viewerjs": "^1.6.1",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.5",
+    "vuedraggable": "^2.24.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -30,6 +36,8 @@
     "@vue/test-utils": "^1.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
