--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@riophae/vue-treeselect": "^0.4.0",
+    "ant-design-vue": "^1.6.5",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "codemirror": "^5.56.0",
