--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.5",
     "vuedraggable": "^2.24.0",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
