--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clipboard": "^2.0.6",
     "codemirror": "^5.56.0",
     "core-js": "^3.6.4",
+    "echarts": "^5.1.1",
     "element-ui": "^2.13.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
