--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "adler-32": "^1.2.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "node-sass": "^4.14.1",
+    "sass": "^1.37.5",
     "sass-loader": "^9.0.2",
     "vue-template-compiler": "^2.6.11"
   }
