--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.4",
     "echarts": "^5.1.1",
     "element-ui": "^2.13.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "jsonlint": "^1.6.3",
@@ -24,7 +25,6 @@
     "normalize.css": "^8.0.1",
     "qiniu": "^7.3.2",
     "qiniu-js": "^3.1.0",
-    "script-loader": "^0.7.2",
     "viewerjs": "^1.6.1",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
@@ -45,6 +45,7 @@
     "less-loader": "^5.0.0",
     "sass": "^1.37.5",
     "sass-loader": "^9.0.2",
+    "script-loader": "^0.7.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
